// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render checkbox with label 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="checkbox"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityInvalid={false}
      accessibilityRequired={false}
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "marginBottom": 2,
            "marginTop": 2,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="column"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            data-blade-component="checkbox-icon-wrapper"
            isChecked={false}
            isNegative={false}
            size="medium"
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "borderColor": "hsla(214, 28%, 84%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1.5,
                  "display": "flex",
                  "flexShrink": 0,
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 2,
                  "marginLeft": 2,
                  "marginRight": 2,
                  "marginTop": 2,
                  "position": "relative",
                  "width": 16,
                },
              ]
            }
          />
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Remember password
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> should set disabled state with isDisabled 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="checkbox"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityInvalid={false}
      accessibilityRequired={false}
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "marginBottom": 2,
            "marginTop": 2,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="column"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            data-blade-component="checkbox-icon-wrapper"
            isChecked={false}
            isDisabled={true}
            isNegative={false}
            size="medium"
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "borderColor": "hsla(214, 40%, 92%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1.5,
                  "display": "flex",
                  "flexShrink": 0,
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 2,
                  "marginLeft": 2,
                  "marginRight": 2,
                  "marginTop": 2,
                  "position": "relative",
                  "width": 16,
                },
              ]
            }
          />
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <Text
            accessible={true}
            color="surface.text.gray.disabled"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(211, 20%, 52%, 0.32)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Remember password
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> should set error state with validationState 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="checkbox"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityErrorMessage="checkbox-25-errortext-27"
      accessibilityInvalid={true}
      accessibilityRequired={false}
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "marginBottom": 2,
            "marginTop": 2,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="column"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            data-blade-component="checkbox-icon-wrapper"
            isChecked={false}
            isNegative={true}
            size="medium"
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "borderColor": "hsla(4, 74%, 49%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1.5,
                  "display": "flex",
                  "flexShrink": 0,
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 2,
                  "marginLeft": 2,
                  "marginRight": 2,
                  "marginTop": 2,
                  "position": "relative",
                  "width": 16,
                },
              ]
            }
          />
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginLeft": 4,
                },
              ]
            }
          />
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Remember password
          </Text>
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          data-blade-component="box"
          flexShrink={0}
          style={
            [
              {
                "flexShrink": 0,
                "marginTop": 2,
              },
            ]
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="12px"
            bbWidth="12px"
            data-blade-component="icon"
            display="block"
            fill="none"
            focusable={false}
            height="12px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {
                    "display": "block",
                  },
                ],
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="12px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                fill={
                  {
                    "payload": 4292422944,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                fill={
                  {
                    "payload": 4292422944,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                clipRule={0}
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                fill={
                  {
                    "payload": 4292422944,
                    "type": 0,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <Text
          accessible={true}
          color="feedback.text.negative.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={50}
          fontStyle="italic"
          fontWeight="regular"
          lineHeight={50}
          style={
            [
              {
                "color": "hsla(4, 74%, 49%, 1)",
                "fontFamily": "Inter",
                "fontSize": 11,
                "fontStyle": "italic",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          This has to be checked
        </Text>
      </View>
    </View>
  </View>
</View>
`;
